final styling and alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,10 @@ body {
 
 .myprofile {
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   font-size: 1.2rem;
-  flex-direction: column;
-  padding: 20px;
+  gap: 10%;
+  padding: 20px 0 0 10px;
   background-color: var(--white);
   margin-top: 7rem;
 }
@@ -54,12 +54,12 @@ body {
   font-weight: 600;
   color: var(--black);
   font-family: var(--font-four);
-  padding-bottom: 5px;
 }
 
 .list-profile {
   justify-content: space-between;
   font-family: var(--font-three);
+  font-weight: 700;
   align-items: center;
   list-style: none;
   width: 25rem;
@@ -72,4 +72,13 @@ body {
   border: none;
   border-radius: 10px;
   background: none;
+}
+
+.list-group {
+  margin-top: 0;
+}
+
+.container h3 {
+  padding: 0;
+  margin: 0;
 }
